--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,14 @@
 html,body{
   overflow: hidden;
-  font-family: "Roboto", "Helvetica", "Arial", "sans-serif";
 }
+body{
+    margin: 0;
+    color: rgba(58, 53, 65, 0.87);
+    font-family: Inter,sans-serif,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 1.5;
+    letter-spacing: 0.15px;
+    background-color: #FFF;
+}
+
